Light mode visibility fix (#66)
* updated links to intel reources - they are shorter
add '(PDF)' text links with pdf resources

* Changes intendation to spaces;
fix minor problems: missing semicolon, deleted unused variables, add missing brackets
Change the way how information about unsupported OS looked - put '\n' instead of '\' marks

* Delete --yarn arguments from "package" and "ui-test" npm commands
to get consistent dev env
note: "ui-test" is not working anyway - im going to rebuild it

* Deleted whitespace which breaks canceling the renaming and add '?' to the 'break on main' text question

* Fix bad view of "Unique oneapi commands" when vscode on light mode

* light mode visibility fix - different colors for dark and light mode colors

--- a/media/userHelp/style.css
+++ b/media/userHelp/style.css
@@ -6,9 +6,17 @@
  */
 
 body{
-    color:rgb(255,255,255,0.87);
+
     font-size: 16px;
     margin-bottom:100px;
+}
+
+.dark-mode{
+    color:rgb(255,255,255,0.87);
+}
+
+.light-mode{
+    color:rgb(0,0,0,0.87);
 }
 
 .center{
@@ -16,7 +24,7 @@ body{
 }
 
 .oneapi-ext{
-    color: rgb(251, 255, 0, 0.8);
+    color: rgb(251, 100, 100, 0.87);
     margin: 0px;
 }
 
@@ -43,8 +51,17 @@ div.content{
 }
 
 div.oneapi-new-commands{
-    border-left: 1px solid rgb(255,255,255,0.3);
+    border-left-width: 1px;
+    border-left-style: solid;
     padding-left: 20px;
+}
+
+div.oneapi-new-commands.light-mode{
+    border-left-color: rgb(0,0,0,0.3);
+}
+
+div.oneapi-new-commands.dark-mode{
+    border-left-color: rgb(255,255,255,0.3);
 }
 
 p {
@@ -87,7 +104,6 @@ li{
 
 li.section-name{
     font-size: 16px;
-    color:rgb(255,255,255,0.60);
 }
 
 li.inner{
@@ -101,12 +117,12 @@ a.header-link{
 }
 
 a:hover{
-    background-color: rgb(255,255,255,0.10);
+    background-color: rgb(128,128,128,0.50);
     border-radius: 5px;
 }
 
 .table {
-    border-color: rgb(255,255,255,0.30);
+    border-color: rgb(128,128,128,0.50);
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
@@ -124,7 +140,7 @@ table.small-table.numeric > tbody > tr >td:first-child{
 }
 
 table.small-table.numeric > tbody > tr >td:nth-child(2){
-    border-right: 1px solid rgb(255,255,255,0.15);
+    border-right: 1px solid rgb(128,128,128,0.50);
     width: 400px;
 }
 
@@ -133,7 +149,7 @@ table.small-table > tbody > tr >td:last-child{
 }
 
 .small-intro {
-    border-bottom: 1px solid rgb(255,255,255,0.15);
+    border-bottom: 1px solid rgb(128,128,128,0.50);
 }
 
 .table > thead > tr > th{
@@ -148,7 +164,7 @@ table.small-table > tbody > tr >td:last-child{
   padding: 8px;
   line-height: 1.42857143;
   vertical-align: top;
-  border-top: 1px solid rgb(255,255,255,0.3);
+  border-top: 1px solid rgb(128,128,128,0.50);
 }
 
 .table > tbody > tr > td:first-child{
@@ -157,5 +173,5 @@ table.small-table > tbody > tr >td:last-child{
 
 .table > thead > tr > th {
     vertical-align: bottom;
-    border-bottom: 2px solid rgb(255,255,255,0.3);
+    border-bottom: 2px solid rgb(128,128,128,0.50);
 }
